welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: identifier expected but 'while' found.
while(!estSurBiscuit())
^