welcome.lessons.welcome.summative.Moria.scala.code
def circuit():
while(!estSurBiscuit())
avance()
def porterBiscuit(){
  prendBiscuit()
  retourne()
  while(!estSurBiscuit())
  avance()
}